# kv-reuse-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish-on-release.yml  test-lint.yml
experiments/: README.md  sbv_load_50.txt
experiments/scripts/: aggregate.py  analyze_load.py  build_load_preds.py  campaign_20260717.sh  campaign_20260717_chainC_recovery.sh  check_stationarity.py  load_cell.sbatch  load_driver.py  record_versions.sh  run_one.sh  run_shard.sh  score_load_preds.sbatch  score_sbv.sh  scrape_metrics.py  serve_qwen3_coder_h100.sbatch  smoke.sh  status.sh  submit_all.sh
experiments/vllm_plugins/ssa_request_ledger/: pyproject.toml
experiments/vllm_plugins/ssa_request_ledger/src/ssa_request_ledger/: __init__.py
simple-strands-agent/: README.md  pyproject.toml
simple-strands-agent/resources/: tb2_docker_public.json  tb2_instruction_map.json
simple-strands-agent/resources/swe_pro_leakage/: git_leakage_swe_pro.md  sanitize_image.sh
simple-strands-agent/src/ssa/: __init__.py  agent.py  agent_runner.py  run.py
simple-strands-agent/tests/: README.md  conftest.py  fake_model.py
simple-strands-agent/tests/agent/: test_agent_retry.py
simple-strands-agent/tests/conversation_manager/: test_conversation_manager.py
simple-strands-agent/tests/e2e/: test_end_to_end.py
simple-strands-agent/tests/environments/: test_local.py  test_streaming_exec.py
simple-strands-agent/tests/hooks/: test_content_hook.py
simple-strands-agent/tests/tools/: test_bash.py  test_batch_bash.py  test_submit.py
(+110 files in other folders)
